replace collect(..) call with toList()